--- a/index.html
+++ b/index.html
@@ -1,29 +1,128 @@
-<script>
-  const CSV_URL = "https://docs.google.com/spreadsheets/d/1Rg_O_ZIoFa4uQZgUs4viuJjl6PWzzSgcFsozD0T0mWs/gviz/tq?tqx=out:csv";
-
-  function parseCSV(data) {
-    const lines = data.trim().split("\n");
-    const rows = lines.map(line => line.split(","));
-    const headers = rows[0];
-    const result = [];
-
-    for (let i = 1; i < rows.length; i++) {
-      let row = {};
-      for (let j = 0; j < headers.length; j++) {
-        row[headers[j].trim()] = rows[i][j] ? rows[i][j].trim() : "";
-      }
-      result.push(row);
+<!DOCTYPE html>
+<html lang="he">
+<head>
+  <meta charset="UTF-8" />
+  <title>בחירת שירים</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      direction: rtl;
+      background: linear-gradient(135deg, #FF6F61 0%, #FFD700 25%, #50C878 50%, #1E90FF 75%, #EE82EE 100%);
+      background-size: 600% 600%;
+      animation: gradientBG 15s ease infinite;
+      padding: 30px;
+      color: #333;
     }
-    return result;
-  }
+    @keyframes gradientBG {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+    h2 {
+      text-align: center;
+      color: #fff;
+      text-shadow: 0 0 5px #000;
+    }
+    .logo {
+      display: block;
+      margin: 0 auto 30px auto;
+      max-width: 300px;
+    }
+    .category {
+      background: rgba(255, 255, 255, 0.9);
+      padding: 12px;
+      margin-bottom: 10px;
+      cursor: pointer;
+      font-weight: bold;
+      border-radius: 6px;
+      transition: background 0.2s;
+    }
+    .category:hover {
+      background: #f0f0f0;
+    }
+    .songs {
+      display: none;
+      padding: 10px 20px;
+      background: rgba(255, 255, 255, 0.95);
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-bottom: 20px;
+    }
+    .song-item {
+      margin: 5px 0;
+    }
+  </style>
+</head>
+<body>
+  <img class="logo" src="eclectica-logo.png" alt="Eclectica Logo">
+  <h2>בחירת שירים</h2>
+  <div id="songs-container">טוען שירים מהגיליון...</div>
 
-  fetch(CSV_URL)
-    .then(response => response.text())
-    .then(text => {
-      const entries = parseCSV(text);
-      // המשך עיבוד הנתונים והצגתם באתר
-    })
-    .catch(err => {
-      console.error("אירעה שגיאה בטעינת השירים:", err);
-    });
-</script>
+  <script>
+    const CSV_URL = "https://docs.google.com/spreadsheets/d/1Rg_O_ZIoFa4uQZgUs4viuJjl6PWzzSgcFsozD0T0mWs/gviz/tq?tqx=out:csv";
+
+    function parseCSV(data) {
+      const lines = data.trim().split("\n");
+      const rows = lines.map(line => line.split(","));
+      const headers = rows[0];
+      const result = [];
+
+      for (let i = 1; i < rows.length; i++) {
+        let row = {};
+        for (let j = 0; j < headers.length; j++) {
+          row[headers[j].trim()] = rows[i][j] ? rows[i][j].trim() : "";
+        }
+        result.push(row);
+      }
+      return result;
+    }
+
+    fetch(CSV_URL)
+      .then(response => response.text())
+      .then(text => {
+        const entries = parseCSV(text);
+        const container = document.getElementById('songs-container');
+        container.innerHTML = "";
+
+        const categories = {};
+
+        entries.forEach(entry => {
+          const category = entry["category"];
+          const song = entry["song"];
+          if (!category || !song) return;
+
+          if (!categories[category]) categories[category] = [];
+          categories[category].push(song);
+        });
+
+        Object.keys(categories).forEach(category => {
+          const catDiv = document.createElement('div');
+          catDiv.className = 'category';
+          catDiv.textContent = '▶ ' + category;
+          catDiv.onclick = () => {
+            const songList = catDiv.nextElementSibling;
+            const isOpen = songList.style.display === 'block';
+            songList.style.display = isOpen ? 'none' : 'block';
+            catDiv.textContent = (isOpen ? '▶ ' : '▼ ') + category;
+          };
+
+          const songsDiv = document.createElement('div');
+          songsDiv.className = 'songs';
+          categories[category].forEach(song => {
+            const item = document.createElement('div');
+            item.className = 'song-item';
+            item.textContent = song;
+            songsDiv.appendChild(item);
+          });
+
+          container.appendChild(catDiv);
+          container.appendChild(songsDiv);
+        });
+      })
+      .catch(err => {
+        document.getElementById('songs-container').innerText = "אירעה שגיאה בטעינת השירים.";
+        console.error(err);
+      });
+  </script>
+</body>
+</html>
