--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
       border: 1px solid #ccc;
       border-radius: 6px;
       margin-bottom: 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 8px;
     }
     .song-item {
-      margin: 5px 0;
+      display: flex;
+      align-items: center;
     }
     .song-item input {
       margin-left: 10px;
@@ -117,6 +121,7 @@
 
           if (!categories[category]) categories[category] = [];
           categories[category].push(song);
+          categories[category].sort((a, b) => a.localeCompare(b, 'he'));
         });
 
         Object.keys(categories).forEach(category => {
@@ -125,8 +130,8 @@
           catDiv.textContent = '▶ ' + category;
           catDiv.onclick = () => {
             const songList = catDiv.nextElementSibling;
-            const isOpen = songList.style.display === 'block';
-            songList.style.display = isOpen ? 'none' : 'block';
+            const isOpen = songList.style.display === 'grid';
+            songList.style.display = isOpen ? 'none' : 'grid';
             catDiv.textContent = (isOpen ? '▶ ' : '▼ ') + category;
           };
 
